<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/Gender_Image"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/infoPersonal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="clip_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTxt">

        <EditText
            android:id="@+id/nombresId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/apellidosId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:hint="@string/apellidos"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGrupo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/gender_image"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/Gender_Image"
            app:srcCompat="@drawable/generos" />

        <TextView
            android:id="@+id/sexoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sexo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/hombreId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/mujerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mujer" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/radioGrupo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/radioGrupo"
        app:layout_constraintTop_toBottomOf="@+id/radioGrupo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fechaTxt"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:text="@string/fechaNacimiento"
                android:textStyle="bold"
                app:drawableStartCompat="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:id="@+id/fechaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="#5E35B1" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cambioFechaInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            tools:ignore="UnknownId" />

    </LinearLayout>

    <Spinner
        android:id="@+id/educacionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#B8ADAD"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/gradoTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/gradoEscolaridad"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/educacionSpinner"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/continuarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="132dp"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educacionSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>